# drf-user-activity-tracker-mongodb

./: .gitignore  MANIFEST.in  README.md  setup.cfg
drf_user_activity_tracker_mongodb/: __init__.py  admin.py  apps.py  insert_log_into_database.py  models.py  permissions.py  serializers.py  start_logger_when_server_starts.py  urls.py  utils.py  views.py
drf_user_activity_tracker_mongodb/management/commands/: get_url_names.py
drf_user_activity_tracker_mongodb/middleware/: activity_tracker_middleware.py
drf_user_activity_tracker_mongodb/migrations/: 0001_initial.py
drf_user_activity_tracker_mongodb/templates/activity_log/admin/: change_detail.html  change_list_v2.html  change_list_v3.html
drf_user_activity_tracker_mongodb/templatetags/: tagger.py
