[metadata]
name = drf-user-activity-tracker-mongodb
version = 1.4.1
description = A Django app to logs users activities in mongodb database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigmo94/drf-user-activity-tracker-mongodb
author = Mohamad Rezaie
author_email = m.rezaie94@gmail.com
license = MIT
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
install_requires = 
	pygeoip==0.3.2
	pymongo==4.1.1
python_requires = >=3.8

[egg_info]
tag_build = 
tag_date = 0

